# retrieval-agent-template

./: .env.example  Makefile  README.md  langgraph.json  langgraph.template.json  pyproject.toml
_scripts/: generate_template_schema.py
retrieval_graph/: graph.py  index_graph.py
retrieval_graph/utils/: configuration.py  state.py  utils.py
src/retrieval_graph/: __init__.py  configuration.py  graph.py  index_graph.py  prompts.py  retrieval.py  state.py  utils.py
tests/integration_tests/: test_graph.py
